fido/mac: localize Touch ID prompt strings

This adds localization for the reason string fragments used in macOS
Touch ID prompts.

The prompts display a message starting with '"Google Chrome" is trying
to ' (controlled by macOS) followed by the reason fragment (controlled
by us). The user can confirm the prompt by providing their fingerprint,
or click cancel.

Bug: 848317
Change-Id: Ibe67c197554cde0af431516d968479b0f416629e
Reviewed-on: https://chromium-review.googlesource.com/1166171
Commit-Queue: Martin Kreichgauer <martinkr@google.com>
Reviewed-by: Jochen Eisinger <jochen@chromium.org>
Reviewed-by: Jan Wilken Dörrie <jdoerrie@chromium.org>
Reviewed-by: Balazs Engedy <engedy@chromium.org>
Cr-Commit-Position: refs/heads/master@{#582637}
Former-commit-id: 2d30db4e8857765e932b6f28a0a97ac6f3e1e8d7